form subgroups and association columns may now be collapsed. closes issue #184.
git-svn-id: http://activescaffold.googlecode.com/svn/trunk@409 561dde7e-7729-0410-be8e-ef83869d6c7d

--- a/frontends/default/stylesheets/stylesheet.css
+++ b/frontends/default/stylesheets/stylesheet.css
@@ -753,3 +753,7 @@ font-weight: bold;
 font-size: 12px;
 padding: 0;
 }
+
+.active-scaffold a.visibility-toggle {
+font-size: 100%;
+}
